crates/rome_formatter/tests/specs/prettier/js/babel-plugins/decorators.js.snap
---
source: crates/rome_formatter/tests/prettier_tests.rs
assertion_line: 144
expression: decorators.js

---
# Input
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass { }

function annotation(target) {
   target.annotated = true;
}

@isTestable(true)
class MyClass { }

function isTestable(value) {
   return function decorator(target) {
      target.isTestable = value;
   }
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
     descriptor.enumerable = value;
     return descriptor;
  }
}

```

# Output
```js
// https://babeljs.io/docs/en/babel-plugin-proposal-decorators

@annotation
class MyClass { }

function annotation(target) {
  target.annotated = true;
}

@isTestable(true)
class MyClass { }

function isTestable(value) {
  return function decorator(target) {
    target.isTestable = value;
  };
}

class C {
  @enumerable(false)
  method() { }
}

function enumerable(value) {
  return function (target, key, descriptor) {
    descriptor.enumerable = value;
    return descriptor;
  };
}

```

# Errors
```
error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
  ┌─ decorators.js:3:1
  │
3 │ @annotation
  │ ^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: decorator are a TypeScript only feature. Convert your file to a TypeScript file or remove the syntax.
   ┌─ decorators.js:10:1
   │
10 │ @isTestable(true)
   │ ^^^^^^^^^^^^^^^^^ TypeScript only syntax

error[SyntaxError]: expected an identifier, a string literal, a number literal, a private field name, or a computed name but instead found '@'
   ┌─ decorators.js:20:3
   │
20 │   @enumerable(false)
   │   ^ Expected an identifier, a string literal, a number literal, a private field name, or a computed name here

error[SyntaxError]: expected a parameter but instead found 'false'
   ┌─ decorators.js:20:15
   │
20 │   @enumerable(false)
   │               ^^^^^ Expected a parameter here

error[SyntaxError]: expected a class method body but instead found 'method'
   ┌─ decorators.js:21:3
   │
21 │   method() { }
   │   ^^^^^^ Expected a class method body here


```


